--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,8 +7,8 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="version.txt"
-exclude_filter="test/*, addons/gdUnit4/*"
+include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path=""
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -49,8 +49,8 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="version.txt"
-exclude_filter="test/*, addons/gdUnit4/*"
+include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="exports/windows/game.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -118,8 +118,8 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="version.txt"
-exclude_filter="test/*, addons/gdUnit4/*"
+include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="exports/linux/G4JT.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -162,8 +162,8 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="version.txt"
-exclude_filter="test/*, addons/gdUnit4/*"
+include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="./game.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
