--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
 exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path=""
 encryption_include_filters=""
@@ -49,7 +49,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
 exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="exports/windows/game.exe"
 encryption_include_filters=""
@@ -118,7 +118,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
 exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="exports/linux/G4JT.x86_64"
 encryption_include_filters=""
@@ -162,7 +162,7 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter="ATTRIBUTION.md, HOW_TO_PLAY.md, version.txt"
+include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
 exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
 export_path="./game.zip"
 encryption_include_filters=""
