--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
-exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*, addons/AsepriteWizard/*"
 export_path=""
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -50,7 +50,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
-exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*, addons/AsepriteWizard/*"
 export_path="exports/windows/game.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -119,7 +119,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
-exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*, addons/AsepriteWizard/*"
 export_path="exports/linux/G4JT.x86_64"
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -163,7 +163,7 @@ dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter="CREDITS.md, HOW_TO_PLAY.md, version.txt"
-exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*"
+exclude_filter="test/*, *.aseprite, addons/Todo_Manager/*, addons/gdUnit4/*, addons/theme_gen/*, addons/AsepriteWizard/*"
 export_path="./game.zip"
 encryption_include_filters=""
 encryption_exclude_filters=""
